# datagest

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: allergens.py  dashboard.py  edit_db.py  foods.py  get_db.py  health.py  logs_food.py  logs_stools.py  logs_symptoms.py
backend/app/core/: config.py
backend/app/database/: deps.py  session.py
backend/app/models/: __init__.py  enums.py  food.py  log.py
backend/app/repositories/: food.py  log.py
backend/app/schemas/: dashboard.py  food.py  log.py
backend/app/services/: food.py  log.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_dashboard.py  test_foods.py  test_logs.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docs/: app_description.md  backend-architecture.md  frontend-architecture.md  ui_ux_pitch.md
frontend/: angular.json  nginx.conf  package-lock.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.routes.ts  app.scss
frontend/src/app/core/models/: food.model.ts  log.model.ts
frontend/src/app/core/services/: allergen-api.service.ts  food-api.service.ts  log-api.service.ts
frontend/src/app/features/foods/: foods.routes.ts
frontend/src/app/features/today/: today.routes.ts
frontend/src/app/layout/bottom-nav/: bottom-nav.component.html  bottom-nav.component.scss  bottom-nav.component.ts
(+33 files in other folders)
